syntax = "proto3";
package ccsds.cdds.tc; 
import "telecommand.proto";

/**
 * CDDS TC Service for uplink of Telecommand frames
 */
service TcServiceProvider {

    /**
     * Opens a bi-directional telecommand stream for send TC radiation request carrying TC frame.
     */ 
    rpc openTelecommandStream(stream TelecommandMessage) returns (stream TelecommandReport); 
}